@@ -1,6 +1,7 @@
 ChangeLog
 lib/Pugs/Compiler/Rule.pm
 lib/Pugs/Compiler/Regex.pm
+lib/Pugs/Compiler/RegexPerl5.pm
 lib/Pugs/Compiler/Token.pm
 lib/Pugs/Emitter/Rule/Perl5.pm
 lib/Pugs/Emitter/Rule/Perl5/Ratchet.pm
@@ -25,5 +26,6 @@ t/05-var.t
 t/06-subrule.t
 t/08-hash.t
 t/09-ratchet.t
+t/10-regex_perl5.t
 t6/iterator_engine.p6
 TODO
