@@ -10,10 +10,12 @@ use Benchmark;
 use Pugs::Compiler::Rule;
 use Pugs::Compiler::Token;
 use Pugs::Compiler::Regex;
+use Pugs::Compiler::RegexPerl5;
 my $rul = '[a|b](b)c';
 my $rpc_rule  = Pugs::Compiler::Rule->compile( $rul );
 my $rpc_token = Pugs::Compiler::Token->compile( $rul );
 my $rpc_regex = Pugs::Compiler::Regex->compile( $rul );
+my $rpc_regexP5 = Pugs::Compiler::RegexPerl5->compile( $rul );
 #print $rpc_token->perl5, "\n";
 
 {
@@ -31,9 +33,10 @@ my $rpc_regex = Pugs::Compiler::Regex->compile( $rul );
     my $str = "abcdefg";
     my $match;
     Benchmark::cmpthese(500, {
-        P6_Rule_x1    => sub{ $match = $rpc_rule->match($str)  for 1..40},
-        P6_Token_x1   => sub{ $match = $rpc_token->match($str) for 1..40},
-        P6_Regex_x1   => sub{ $match = $rpc_regex->match($str) for 1..40},
+        P6_Rule    => sub{ $match = $rpc_rule->match($str)    for 1..40},
+        P6_Token   => sub{ $match = $rpc_token->match($str)   for 1..40},
+        P6_Regex   => sub{ $match = $rpc_regex->match($str)   for 1..40},
+        P6_RegexP5 => sub{ $match = $rpc_regexP5->match($str) for 1..40},
         P5_regex_x10 => sub{ 
                    $match = sub{$_[0] =~ /[a|b](b)c/os}->($str) for 1..400},
     });
